--- a/docs/csharp/misc/cs0012.md
+++ b/docs/csharp/misc/cs0012.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS0012
 ms.assetid: 5523e349-22f4-4b0b-b4b0-c4bf26c461f4
-ms.openlocfilehash: 40ebd88a6a750a8a52a4fcd5d40ebeaf7282a809
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: HT
+ms.openlocfilehash: dfdd1127064c06341e930d8ee6edc2661eb1e0b1
+ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33279768"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "56799055"
 ---
-# <a name="compiler-error-cs0012"></a><span data-ttu-id="56687-102">컴파일러 오류 CS0012</span><span class="sxs-lookup"><span data-stu-id="56687-102">Compiler Error CS0012</span></span>
-<span data-ttu-id="56687-103">'type' 형식이 참조되지 않은 어셈블리에 정의되었습니다.</span><span class="sxs-lookup"><span data-stu-id="56687-103">The type 'type' is defined in an assembly that is not referenced.</span></span> <span data-ttu-id="56687-104">'assembly' 어셈블리에 참조를 추가해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="56687-104">You must add a reference to assembly 'assembly'.</span></span>  
+# <a name="compiler-error-cs0012"></a><span data-ttu-id="6de4a-102">컴파일러 오류 CS0012</span><span class="sxs-lookup"><span data-stu-id="6de4a-102">Compiler Error CS0012</span></span>
+<span data-ttu-id="6de4a-103">'type' 형식이 참조되지 않은 어셈블리에 정의되었습니다.</span><span class="sxs-lookup"><span data-stu-id="6de4a-103">The type 'type' is defined in an assembly that is not referenced.</span></span> <span data-ttu-id="6de4a-104">'assembly' 어셈블리에 참조를 추가해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6de4a-104">You must add a reference to assembly 'assembly'.</span></span>  
   
- <span data-ttu-id="56687-105">참조된 형식에 대한 정의를 찾을 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="56687-105">The definition for a referenced type was not found.</span></span> <span data-ttu-id="56687-106">이 오류는 필요한 .DLL 파일이 컴파일에 포함되지 않은 경우 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="56687-106">This could occur if a required .DLL file is not included in the compilation.</span></span> <span data-ttu-id="56687-107">자세한 내용은 참조 [참조 추가 대화 상자](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) 및 [/reference (C# 컴파일러 옵션)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="56687-107">For more information, see [Add Reference Dialog Box](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) and [/reference (C# Compiler Options)](../../csharp/language-reference/compiler-options/reference-compiler-option.md).</span></span>  
+ <span data-ttu-id="6de4a-105">참조된 형식에 대한 정의를 찾을 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="6de4a-105">The definition for a referenced type was not found.</span></span> <span data-ttu-id="6de4a-106">이 오류는 필요한 .DLL 파일이 컴파일에 포함되지 않은 경우 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6de4a-106">This could occur if a required .DLL file is not included in the compilation.</span></span> <span data-ttu-id="6de4a-107">자세한 내용은 참조 하세요. [참조 추가 대화 상자](/visualstudio/ide/how-to-add-or-remove-references-by-using-the-reference-manager) 하 고 [/reference (C# 컴파일러 옵션)](../../csharp/language-reference/compiler-options/reference-compiler-option.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="6de4a-107">For more information, see [Add Reference Dialog Box](/visualstudio/ide/how-to-add-or-remove-references-by-using-the-reference-manager) and [/reference (C# Compiler Options)](../../csharp/language-reference/compiler-options/reference-compiler-option.md).</span></span>  
   
- <span data-ttu-id="56687-108">다음 컴파일 시퀀스는 CS0012를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="56687-108">The following sequence of compilations will result in CS0012:</span></span>  
+ <span data-ttu-id="6de4a-108">다음 컴파일 시퀀스는 CS0012를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="6de4a-108">The following sequence of compilations will result in CS0012:</span></span>  
   
 ```csharp  
 // cs0012a.cs  
@@ -26,7 +26,7 @@ ms.locfileid: "33279768"
 public class A {}  
 ```  
   
- <span data-ttu-id="56687-109">다음을 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="56687-109">Then:</span></span>  
+ <span data-ttu-id="6de4a-109">다음을 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="6de4a-109">Then:</span></span>  
   
 ```csharp  
 // cs0012b.cs  
@@ -40,7 +40,7 @@ public class B
 }  
 ```  
   
- <span data-ttu-id="56687-110">다음을 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="56687-110">Then:</span></span>  
+ <span data-ttu-id="6de4a-110">다음을 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="6de4a-110">Then:</span></span>  
   
 ```csharp  
 // cs0012c.cs  
@@ -54,4 +54,4 @@ class C
 }  
 ```  
   
- <span data-ttu-id="56687-111">사용 하 여 컴파일하면 c s이 0012를 해결할 수 있습니다 `/reference:cs0012b.dll;cs0012a.dll`, 또는 사용 하 여 Visual Studio에서의 [참조 추가 대화 상자](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) cs0012b.dll 외에도 cs0012a.dll에 대 한 참조를 추가 하려면.</span><span class="sxs-lookup"><span data-stu-id="56687-111">You could resolve this CS0012 by compiling with `/reference:cs0012b.dll;cs0012a.dll`, or in Visual Studio by using the [Add Reference Dialog Box](http://msdn.microsoft.com/library/2feb0fe2-0805-4cc9-8cba-b0315849dfb7) to add a reference to cs0012a.dll in addition to cs0012b.dll.</span></span>
+ <span data-ttu-id="6de4a-111"> `/reference:cs0012b.dll;cs0012a.dll\`을 사용하여 컴파일하거나 Visual Studio에서 [Add Reference Dialog Box](/visualstudio/ide/how-to-add-or-remove-references-by-using-the-reference-manager) 를 사용하여 cs0012a.dll 및 cs0012b.dll에 대한 참조를 추가하여 CS0012를 해결할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6de4a-111">You could resolve this CS0012 by compiling with `/reference:cs0012b.dll;cs0012a.dll`, or in Visual Studio by using the [Add Reference Dialog Box](/visualstudio/ide/how-to-add-or-remove-references-by-using-the-reference-manager) to add a reference to cs0012a.dll in addition to cs0012b.dll.</span></span>
