--- a/docs/csharp/misc/cs3001.md
+++ b/docs/csharp/misc/cs3001.md
@@ -6,20 +6,20 @@ f1_keywords:
 helpviewer_keywords:
 - CS3001
 ms.assetid: c4f3e247-5e47-4182-b415-c573fb1a152f
-ms.openlocfilehash: 810867deda4e3f94c34c0ee78b66cc4657389e2e
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: HT
+ms.openlocfilehash: 20aa0a2e6c91edcdc8e4224471cdb8f2b5fe86ee
+ms.sourcegitcommit: 8f95d3a37e591963ebbb9af6e90686fd5f3b8707
+ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33313279"
+ms.lasthandoff: 02/23/2019
+ms.locfileid: "56800423"
 ---
-# <a name="compiler-warning-level-1-cs3001"></a><span data-ttu-id="c46e2-102">컴파일러 경고(수준 1) CS3001</span><span class="sxs-lookup"><span data-stu-id="c46e2-102">Compiler Warning (level 1) CS3001</span></span>
-<span data-ttu-id="c46e2-103">인수 형식 'type'이 CLS 규격이 아닙니다.</span><span class="sxs-lookup"><span data-stu-id="c46e2-103">Argument type 'type' is not CLS-compliant</span></span>  
+# <a name="compiler-warning-level-1-cs3001"></a><span data-ttu-id="a0425-102">컴파일러 경고(수준 1) CS3001</span><span class="sxs-lookup"><span data-stu-id="a0425-102">Compiler Warning (level 1) CS3001</span></span>
+<span data-ttu-id="a0425-103">인수 형식 'type'이 CLS 규격이 아닙니다.</span><span class="sxs-lookup"><span data-stu-id="a0425-103">Argument type 'type' is not CLS-compliant</span></span>  
   
- <span data-ttu-id="c46e2-104">A [공용](../../csharp/language-reference/keywords/public.md), [보호](../../csharp/language-reference/keywords/protected.md), 또는 `protected internal` 메서드는 공용 언어 사양 (CLS 규격) 형식의 매개 변수를 허용 해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="c46e2-104">A [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md), or `protected internal` method must accept a parameter whose type is compliant with the Common Language Specification (CLS).</span></span> <span data-ttu-id="c46e2-105">CLS 규격에 대한 자세한 내용은 [CLS 규격 코드 작성](http://msdn.microsoft.com/library/4c705105-69a2-4e5e-b24e-0633bc32c7f3) 및 [언어 독립성 및 언어 독립적 구성 요소](../../../docs/standard/language-independence-and-language-independent-components.md)를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="c46e2-105">For more information on CLS Compliance, see [Writing CLS-Compliant Code](http://msdn.microsoft.com/library/4c705105-69a2-4e5e-b24e-0633bc32c7f3) and [Language Independence and Language-Independent Components](../../../docs/standard/language-independence-and-language-independent-components.md).</span></span>  
+ <span data-ttu-id="a0425-104"> [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md)또는 `protected internal` 메서드는 형식이 CLS(공용 언어 사양) 규격인 매개 변수를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a0425-104">A [public](../../csharp/language-reference/keywords/public.md), [protected](../../csharp/language-reference/keywords/protected.md), or `protected internal` method must accept a parameter whose type is compliant with the Common Language Specification (CLS).</span></span> <span data-ttu-id="a0425-105">CLS 규격에 대 한 자세한 내용은 참조 하세요. [언어 독립성 및 언어 독립적 구성 요소](../../standard/language-independence.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="a0425-105">For more information on CLS compliance, see  [Language independence and language-independent components](../../standard/language-independence.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="c46e2-106">예제</span><span class="sxs-lookup"><span data-stu-id="c46e2-106">Example</span></span>  
- <span data-ttu-id="c46e2-107">다음 예제에서는 CS3001을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="c46e2-107">The following example generates CS3001:</span></span>  
+## <a name="example"></a><span data-ttu-id="a0425-106">예제</span><span class="sxs-lookup"><span data-stu-id="a0425-106">Example</span></span>  
+ <span data-ttu-id="a0425-107">다음 예제에서는 CS3001을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="a0425-107">The following example generates CS3001:</span></span>  
   
 ```csharp  
 // CS3001.cs  
