--- a/docs/visual-basic/misc/bc30708.md
+++ b/docs/visual-basic/misc/bc30708.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30708
 ms.assetid: d4342b05-aef8-4163-8009-d77047d942ec
-ms.openlocfilehash: 3b093b74b7faff172cad9352a18b109f1d019061
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 3b6cadd1b8ba7c18db5425489411bc47e3f9878c
+ms.sourcegitcommit: 40364ded04fa6cdcb2b6beca7f68412e2e12f633
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54527291"
+ms.lasthandoff: 02/28/2019
+ms.locfileid: "56981753"
 ---
 # <a name="loop-statements-are-not-valid-in-the-immediate-window"></a>직접 실행 창에서는 Loop 문을 사용할 수 없습니다.
 `Loop` 직접 실행 **창에서는** 문을 사용할 수 없습니다.  
@@ -24,5 +24,6 @@ ms.locfileid: "54527291"
 -   디버깅 코드에서 `Loop` 문을 제거합니다.  
   
 ## <a name="see-also"></a>참고자료
-- [Loop-삭제](https://msdn.microsoft.com/library/707e1afe-71d1-4ebd-83fd-3fa6a8e38e57)
+
+- [수행 하는 중... 반복 문 (Visual Basic)](../language-reference/statements/do-loop-statement.md)
 - [Visual Studio의 디버깅](/visualstudio/debugger/debugging-in-visual-studio)
