--- a/docs/visual-basic/misc/bc31137.md
+++ b/docs/visual-basic/misc/bc31137.md
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC31137
 ms.assetid: 9db77546-9205-4fd2-baf6-6eb1b46b1f1a
-ms.openlocfilehash: 4404039a1293049e011b9445ff598902bb317f88
-ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
+ms.openlocfilehash: 9dd301ac1f4cb87094c5f3d9e91721111c4fe701
+ms.sourcegitcommit: 40364ded04fa6cdcb2b6beca7f68412e2e12f633
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55254706"
+ms.lasthandoff: 02/28/2019
+ms.locfileid: "56981389"
 ---
-# <a name="raiseevent-method-must-have-the-same-signature-as-the-containing-events-delegate-type-signature"></a><span data-ttu-id="9b4b3-102">'RaiseEvent' 메서드를 포함 하는 이벤트의 대리자 형식으로 동일한 시그니처가 있어야 합니다. '\<서명 >'</span><span class="sxs-lookup"><span data-stu-id="9b4b3-102">'RaiseEvent' method must have the same signature as the containing event's delegate type '\<signature>'</span></span>
-<span data-ttu-id="9b4b3-103">`Custom Event` 선언에는 사용자 지정 이벤트의 `RaiseEvent` 절에서 지정된 대리자 형식과 동일한 서명을 가진 `As` 선언이 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9b4b3-103">A `Custom Event` declaration must have `RaiseEvent` declaration that has the same signature as the delegate type specified by the custom event's `As` clause.</span></span>  
+# <a name="raiseevent-method-must-have-the-same-signature-as-the-containing-events-delegate-type-signature"></a><span data-ttu-id="b9b04-102">'RaiseEvent' 메서드를 포함 하는 이벤트의 대리자 형식으로 동일한 시그니처가 있어야 합니다. '\<서명 >'</span><span class="sxs-lookup"><span data-stu-id="b9b04-102">'RaiseEvent' method must have the same signature as the containing event's delegate type '\<signature>'</span></span>
+<span data-ttu-id="b9b04-103">`Custom Event` 선언에는 사용자 지정 이벤트의 `RaiseEvent` 절에서 지정된 대리자 형식과 동일한 서명을 가진 `As` 선언이 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b9b04-103">A `Custom Event` declaration must have `RaiseEvent` declaration that has the same signature as the delegate type specified by the custom event's `As` clause.</span></span>  
   
- <span data-ttu-id="9b4b3-104">서명이 일치하려면 `RaiseEvent` 선언과 대리자의 매개 변수 개수와 매개 변수 형식이 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9b4b3-104">For the signatures to match, the `RaiseEvent` declaration and the delegate must have the number of parameters, and the parameters types must match.</span></span>  
+ <span data-ttu-id="b9b04-104">서명이 일치하려면 `RaiseEvent` 선언과 대리자의 매개 변수 개수와 매개 변수 형식이 일치해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b9b04-104">For the signatures to match, the `RaiseEvent` declaration and the delegate must have the number of parameters, and the parameters types must match.</span></span>  
   
- <span data-ttu-id="9b4b3-105">**오류 ID:** BC31137</span><span class="sxs-lookup"><span data-stu-id="9b4b3-105">**Error ID:** BC31137</span></span>  
+ <span data-ttu-id="b9b04-105">**오류 ID:** BC31137</span><span class="sxs-lookup"><span data-stu-id="b9b04-105">**Error ID:** BC31137</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9b4b3-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9b4b3-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b9b04-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b9b04-106">To correct this error</span></span>  
   
--   <span data-ttu-id="9b4b3-107">`RaiseEvent` 선언의 매개 변수를 대리자 형식의 매개 변수와 일치하도록 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="9b4b3-107">Change the parameters of the `RaiseEvent` declaration to match the parameters of the delegate type.</span></span>  
+-   <span data-ttu-id="b9b04-107">`RaiseEvent` 선언의 매개 변수를 대리자 형식의 매개 변수와 일치하도록 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="b9b04-107">Change the parameters of the `RaiseEvent` declaration to match the parameters of the delegate type.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="9b4b3-108">예제</span><span class="sxs-lookup"><span data-stu-id="9b4b3-108">Example</span></span>  
- <span data-ttu-id="9b4b3-109">이 예제에서는 `RaiseEvent` 선언에 대한 올바른 매개 변수 형식으로 사용자 지정 이벤트를 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="9b4b3-109">This example shows a custom event with the correct parameter types for the `RaiseEvent` declaration.</span></span>  
+## <a name="example"></a><span data-ttu-id="b9b04-108">예제</span><span class="sxs-lookup"><span data-stu-id="b9b04-108">Example</span></span>  
+ <span data-ttu-id="b9b04-109">이 예제에서는 `RaiseEvent` 선언에 대한 올바른 매개 변수 형식으로 사용자 지정 이벤트를 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="b9b04-109">This example shows a custom event with the correct parameter types for the `RaiseEvent` declaration.</span></span>  
   
- [!code-vb[VbVbalrEventError#2](../../visual-basic/language-reference/error-messages/codesnippet/VisualBasic/bc31137_1.vb)]  
+ [!code-vb[VbVbalrEventError#2](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrEventError/VB/VbVbalrEventError.vb#2)]  
   
-## <a name="see-also"></a><span data-ttu-id="9b4b3-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="9b4b3-110">See also</span></span>
-- [<span data-ttu-id="9b4b3-111">Event 문</span><span class="sxs-lookup"><span data-stu-id="9b4b3-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="9b4b3-112">RaiseEvent 문</span><span class="sxs-lookup"><span data-stu-id="9b4b3-112">RaiseEvent statement</span></span>](~/docs/visual-basic/language-reference/statements/raiseevent-statement.md)
-- [<span data-ttu-id="9b4b3-113">Delegate 문</span><span class="sxs-lookup"><span data-stu-id="9b4b3-113">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="9b4b3-114">이벤트</span><span class="sxs-lookup"><span data-stu-id="9b4b3-114">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+## <a name="see-also"></a><span data-ttu-id="b9b04-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="b9b04-110">See also</span></span>
+- [<span data-ttu-id="b9b04-111">Event 문</span><span class="sxs-lookup"><span data-stu-id="b9b04-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="b9b04-112">RaiseEvent 문</span><span class="sxs-lookup"><span data-stu-id="b9b04-112">RaiseEvent statement</span></span>](~/docs/visual-basic/language-reference/statements/raiseevent-statement.md)
+- [<span data-ttu-id="b9b04-113">Delegate 문</span><span class="sxs-lookup"><span data-stu-id="b9b04-113">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="b9b04-114">이벤트</span><span class="sxs-lookup"><span data-stu-id="b9b04-114">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
