--- a/docs/visual-basic/misc/bc30708.md
+++ b/docs/visual-basic/misc/bc30708.md
@@ -7,22 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30708
 ms.assetid: d4342b05-aef8-4163-8009-d77047d942ec
-ms.openlocfilehash: 3b093b74b7faff172cad9352a18b109f1d019061
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 3b6cadd1b8ba7c18db5425489411bc47e3f9878c
+ms.sourcegitcommit: 40364ded04fa6cdcb2b6beca7f68412e2e12f633
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54527291"
+ms.lasthandoff: 02/28/2019
+ms.locfileid: "56981753"
 ---
-# <a name="loop-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="be036-102">직접 실행 창에서는 Loop 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="be036-102">Loop statements are not valid in the Immediate window</span></span>
-<span data-ttu-id="be036-103">`Loop` 직접 실행 **창에서는** 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="be036-103">`Loop` statements cannot be used in the **Immediate** window.</span></span>  
+# <a name="loop-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="8cc48-102">직접 실행 창에서는 Loop 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8cc48-102">Loop statements are not valid in the Immediate window</span></span>
+<span data-ttu-id="8cc48-103">`Loop` 직접 실행 **창에서는** 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8cc48-103">`Loop` statements cannot be used in the **Immediate** window.</span></span>  
   
- <span data-ttu-id="be036-104">**오류 ID:** BC30708</span><span class="sxs-lookup"><span data-stu-id="be036-104">**Error ID:** BC30708</span></span>  
+ <span data-ttu-id="8cc48-104">**오류 ID:** BC30708</span><span class="sxs-lookup"><span data-stu-id="8cc48-104">**Error ID:** BC30708</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="be036-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="be036-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8cc48-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8cc48-105">To correct this error</span></span>  
   
--   <span data-ttu-id="be036-106">디버깅 코드에서 `Loop` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="be036-106">Remove `Loop` statements from the debugging code.</span></span>  
+-   <span data-ttu-id="8cc48-106">디버깅 코드에서 `Loop` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="8cc48-106">Remove `Loop` statements from the debugging code.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="be036-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="be036-107">See also</span></span>
-- [<span data-ttu-id="be036-108">Loop-삭제</span><span class="sxs-lookup"><span data-stu-id="be036-108">Loop - delete</span></span>](https://msdn.microsoft.com/library/707e1afe-71d1-4ebd-83fd-3fa6a8e38e57)
-- [<span data-ttu-id="be036-109">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="be036-109">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
+## <a name="see-also"></a><span data-ttu-id="8cc48-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="8cc48-107">See also</span></span>
+
+- [<span data-ttu-id="8cc48-108">수행 하는 중... 반복 문 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="8cc48-108">Do...Loop Statement (Visual Basic)</span></span>](../language-reference/statements/do-loop-statement.md)
+- [<span data-ttu-id="8cc48-109">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="8cc48-109">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
