--- a/docs/csharp/misc/cs0282.md
+++ b/docs/csharp/misc/cs0282.md
@@ -6,40 +6,43 @@ f1_keywords:
 helpviewer_keywords:
 - CS0282
 ms.assetid: fd4cda5d-81c7-40e3-8424-c938b3447356
-ms.openlocfilehash: 3c2bc3e4ab4254a51a04730f1c7829e5929c532a
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: HT
+ms.openlocfilehash: 576668da3e5c835a4c66021246f1ded098ce2e24
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
+ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33289479"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200041"
 ---
 # <a name="compiler-warning-level-3-cs0282"></a>컴파일러 경고(수준 3) CS0282
-partial 클래스 또는 구조체 'type'의 여러 선언에서 필드 간 순서가 정의되어 있지 않습니다. 순서를 지정하려면 모든 인스턴스 필드가 같은 선언에 있어야 합니다.  
-  
- 이 오류를 해결하려면 모든 멤버 변수를 단일 partial 클래스 정의에 넣습니다.  
-  
- 이 오류는 일반적으로 둘 이상의 위치에 정의된 partial `struct` 의 멤버 변수가 일부분씩 다른 정의에 나뉘어 있는 경우 발생합니다.  
-  
- 다음 코드에서는 CS0282를 생성합니다.  
-  
-## <a name="example"></a>예제  
- 이 코드에는 `struct`에 대한 설명이 포함됩니다. 이 두 모듈을 함께 단일 단계에서 다음 명령을 사용하여 컴파일합니다.  
-  
- `csc /targt:library cs0282_1.cs cs0282_2.cs`  
-  
-```csharp  
-partial struct A  
-{  
-    int i;  
-}  
-```  
-  
-## <a name="example"></a>예제  
- 이 코드에는 동일한 `struct`에 대해 충돌하는 설명이 포함됩니다.  
-  
-```csharp  
-partial struct A  
-{  
-    int j;  
-}  
+
+partial 클래스 또는 구조체 'type'의 여러 선언에서 필드 간 순서가 정의되어 있지 않습니다. 순서를 지정하려면 모든 인스턴스 필드가 같은 선언에 있어야 합니다.
+
+이 오류를 해결하려면 모든 멤버 변수를 단일 partial 클래스 정의에 넣습니다.
+
+이 오류는 일반적으로 둘 이상의 위치에 정의된 partial `struct` 의 멤버 변수가 일부분씩 다른 정의에 나뉘어 있는 경우 발생합니다.
+
+다음 코드에서는 CS0282를 생성합니다.
+
+## <a name="example"></a>예제
+
+이 코드에는 `struct`에 대한 설명이 포함됩니다. 이 두 모듈을 함께 단일 단계에서 다음 명령을 사용하여 컴파일합니다.
+
+`csc /target:library cs0282_1.cs cs0282_2.cs`
+
+```csharp
+partial struct A
+{
+    int i;
+}
+```
+
+## <a name="example"></a>예제
+
+이 코드에는 동일한 `struct`에 대해 충돌하는 설명이 포함됩니다.
+
+```csharp
+partial struct A
+{
+    int j;
+}
 ```
