--- a/docs/csharp/misc/cs0282.md
+++ b/docs/csharp/misc/cs0282.md
@@ -6,40 +6,43 @@ f1_keywords:
 helpviewer_keywords:
 - CS0282
 ms.assetid: fd4cda5d-81c7-40e3-8424-c938b3447356
-ms.openlocfilehash: 3c2bc3e4ab4254a51a04730f1c7829e5929c532a
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: HT
+ms.openlocfilehash: 576668da3e5c835a4c66021246f1ded098ce2e24
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
+ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33289479"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200041"
 ---
-# <a name="compiler-warning-level-3-cs0282"></a><span data-ttu-id="af98d-102">컴파일러 경고(수준 3) CS0282</span><span class="sxs-lookup"><span data-stu-id="af98d-102">Compiler Warning (level 3) CS0282</span></span>
-<span data-ttu-id="af98d-103">partial 클래스 또는 구조체 'type'의 여러 선언에서 필드 간 순서가 정의되어 있지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="af98d-103">There is no defined ordering between fields in multiple declarations of partial class or struct 'type'.</span></span> <span data-ttu-id="af98d-104">순서를 지정하려면 모든 인스턴스 필드가 같은 선언에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="af98d-104">To specify an ordering, all instance fields must be in the same declaration.</span></span>  
-  
- <span data-ttu-id="af98d-105">이 오류를 해결하려면 모든 멤버 변수를 단일 partial 클래스 정의에 넣습니다.</span><span class="sxs-lookup"><span data-stu-id="af98d-105">To resolve this error, put all member variables in a single partial class definition.</span></span>  
-  
- <span data-ttu-id="af98d-106">이 오류는 일반적으로 둘 이상의 위치에 정의된 partial `struct` 의 멤버 변수가 일부분씩 다른 정의에 나뉘어 있는 경우 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="af98d-106">A common way to get this error is by having a partial `struct` defined in more than one place, with some of the member variables in one definition, and some in another.</span></span>  
-  
- <span data-ttu-id="af98d-107">다음 코드에서는 CS0282를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="af98d-107">The following code generates CS0282.</span></span>  
-  
-## <a name="example"></a><span data-ttu-id="af98d-108">예제</span><span class="sxs-lookup"><span data-stu-id="af98d-108">Example</span></span>  
- <span data-ttu-id="af98d-109">이 코드에는 `struct`에 대한 설명이 포함됩니다.</span><span class="sxs-lookup"><span data-stu-id="af98d-109">This code contains one description of a `struct`.</span></span> <span data-ttu-id="af98d-110">이 두 모듈을 함께 단일 단계에서 다음 명령을 사용하여 컴파일합니다.</span><span class="sxs-lookup"><span data-stu-id="af98d-110">Compile these two modules together in a single step by means of the command:</span></span>  
-  
- `csc /targt:library cs0282_1.cs cs0282_2.cs`  
-  
-```csharp  
-partial struct A  
-{  
-    int i;  
-}  
-```  
-  
-## <a name="example"></a><span data-ttu-id="af98d-111">예제</span><span class="sxs-lookup"><span data-stu-id="af98d-111">Example</span></span>  
- <span data-ttu-id="af98d-112">이 코드에는 동일한 `struct`에 대해 충돌하는 설명이 포함됩니다.</span><span class="sxs-lookup"><span data-stu-id="af98d-112">This code contains a conflicting description of the same `struct`.</span></span>  
-  
-```csharp  
-partial struct A  
-{  
-    int j;  
-}  
+# <a name="compiler-warning-level-3-cs0282"></a><span data-ttu-id="ad44b-102">컴파일러 경고(수준 3) CS0282</span><span class="sxs-lookup"><span data-stu-id="ad44b-102">Compiler Warning (level 3) CS0282</span></span>
+
+<span data-ttu-id="ad44b-103">partial 클래스 또는 구조체 'type'의 여러 선언에서 필드 간 순서가 정의되어 있지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="ad44b-103">There is no defined ordering between fields in multiple declarations of partial class or struct 'type'.</span></span> <span data-ttu-id="ad44b-104">순서를 지정하려면 모든 인스턴스 필드가 같은 선언에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ad44b-104">To specify an ordering, all instance fields must be in the same declaration.</span></span>
+
+<span data-ttu-id="ad44b-105">이 오류를 해결하려면 모든 멤버 변수를 단일 partial 클래스 정의에 넣습니다.</span><span class="sxs-lookup"><span data-stu-id="ad44b-105">To resolve this error, put all member variables in a single partial class definition.</span></span>
+
+<span data-ttu-id="ad44b-106">이 오류는 일반적으로 둘 이상의 위치에 정의된 partial `struct` 의 멤버 변수가 일부분씩 다른 정의에 나뉘어 있는 경우 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="ad44b-106">A common way to get this error is by having a partial `struct` defined in more than one place, with some of the member variables in one definition, and some in another.</span></span>
+
+<span data-ttu-id="ad44b-107">다음 코드에서는 CS0282를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="ad44b-107">The following code generates CS0282.</span></span>
+
+## <a name="example"></a><span data-ttu-id="ad44b-108">예제</span><span class="sxs-lookup"><span data-stu-id="ad44b-108">Example</span></span>
+
+<span data-ttu-id="ad44b-109">이 코드에는 `struct`에 대한 설명이 포함됩니다.</span><span class="sxs-lookup"><span data-stu-id="ad44b-109">This code contains one description of a `struct`.</span></span> <span data-ttu-id="ad44b-110">이 두 모듈을 함께 단일 단계에서 다음 명령을 사용하여 컴파일합니다.</span><span class="sxs-lookup"><span data-stu-id="ad44b-110">Compile these two modules together in a single step by means of the command:</span></span>
+
+`csc /target:library cs0282_1.cs cs0282_2.cs`
+
+```csharp
+partial struct A
+{
+    int i;
+}
+```
+
+## <a name="example"></a><span data-ttu-id="ad44b-111">예제</span><span class="sxs-lookup"><span data-stu-id="ad44b-111">Example</span></span>
+
+<span data-ttu-id="ad44b-112">이 코드에는 동일한 `struct`에 대해 충돌하는 설명이 포함됩니다.</span><span class="sxs-lookup"><span data-stu-id="ad44b-112">This code contains a conflicting description of the same `struct`.</span></span>
+
+```csharp
+partial struct A
+{
+    int j;
+}
 ```
